<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/gray"
    tools:context=".MainActivity">

    <!--  Formula - Cuenta en progreso  -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvFormula"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="60dp"
        android:gravity="end"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="formula"/>


    <!--  Resultado  -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvResult"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:gravity="end"
        android:text="@string/zero"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintTop_toBottomOf="@+id/tvFormula"/>


    <!-- Layout Botones -->
    <GridLayout
        android:id="@+id/layoutMain"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="40dp"
        android:columnCount="4"
        android:rowCount="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvResult">
        <!--  Botones  -->
        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/clear"
            android:layout_rowWeight="1"
            android:layout_columnSpan="2"
            android:layout_columnWeight="2"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/orange"
            android:textColor="@color/white"
            android:text="@string/AC"
            android:textSize="30sp"
            app:cornerRadius="15dp"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/plus"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/orange"
            android:textColor="@color/white"
            android:text="@string/plus"
            android:textSize="30sp"
            app:cornerRadius="15dp"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/divide"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/orange"
            android:textColor="@color/white"
            android:text="@string/divide"
            android:textSize="30sp"
            app:cornerRadius="15dp"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/seven"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"
            android:text="@string/seven"
            android:textSize="30sp"
            app:cornerRadius="15dp"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/eight"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"
            android:text="@string/eight"
            android:textSize="30sp"
            app:cornerRadius="15dp"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/nine"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"
            android:text="@string/nine"
            android:textSize="30sp"
            app:cornerRadius="15dp"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/multiply"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/orange"
            android:textColor="@color/white"
            android:text="@string/multiply"
            android:textSize="30sp"
            app:cornerRadius="15dp"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/four"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"
            android:text="@string/four"
            android:textSize="30sp"
            app:cornerRadius="15dp"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/five"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"
            android:text="@string/five"
            android:textSize="30sp"
            app:cornerRadius="15dp"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/six"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"
            android:text="@string/six"
            android:textSize="30sp"
            app:cornerRadius="15dp"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/mines"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/orange"
            android:textColor="@color/white"
            android:text="@string/mines"
            android:textSize="30sp"
            app:cornerRadius="15dp"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/one"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"
            android:text="@string/one"
            android:textSize="30sp"
            app:cornerRadius="15dp"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/two"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"
            android:text="@string/two"
            android:textSize="30sp"
            app:cornerRadius="15dp"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/three"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"
            android:text="@string/three"
            android:textSize="30sp"
            app:cornerRadius="15dp"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/equal"
            android:layout_rowWeight="2"
            android:layout_rowSpan="2"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/orange"
            android:textColor="@color/white"
            android:text="@string/equal"
            android:textSize="30sp"
            app:cornerRadius="15dp"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/zero"
            android:layout_rowWeight="1"
            android:layout_columnSpan="2"
            android:layout_columnWeight="2"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"
            android:text="@string/zero"
            android:textSize="30sp"
            app:cornerRadius="15dp"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/dot"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"
            android:text="@string/dot"
            android:textSize="30sp"
            app:cornerRadius="15dp"/>
    </GridLayout>



</androidx.constraintlayout.widget.ConstraintLayout>